--- a/main.html
+++ b/main.html
@@ -8,8 +8,31 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<form action="#" method="POST">
+		<h2>Feedback Form</h2>
+
+		<label for="name">Name:</label>
+		<input type="text" id="name" name="name" minlength="3" maxlength="50" required>
+
+		<label for="portfolio">Portfolio:</label>
+		<input type="url" id="portfolio" name="portfolio" required>
+
+		<label for="favColor">Favourite Colour:</label>
+		<select id="favColor" name="favColor">
+			<option value="red">Red</option>
+			<option value="blue">Blue</option>
+			<option value="green">Green</option>
+			<option value="yellow">Yellow</option>
+		</select>
+
+		<label for="likeness">How much do you like this color?</label>
+		<input type="range" id="likeness" name="likeness" min="1" max="100">
+
+		<button type="submit">Submit</button>
+	</form>
+
+	<script type="text/javascript" src="./script.js">
+	</script>
 
 </body>
 
