--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
 		<input type="url" id="portfolio" name="portfolio" required>
 
 		<label for="favColor">Favourite Colour:</label>
-		<select id="favColor" name="favColor">
+		<select type="color" id="favColor" name="favColor">
 			<option value="red">Red</option>
 			<option value="blue">Blue</option>
 			<option value="green">Green</option>
