--- a/main.html
+++ b/main.html
@@ -18,12 +18,8 @@
 		<input type="url" id="portfolio" name="portfolio" required>
 
 		<label for="favColor">Favourite Colour:</label>
-		<select type="color" id="favColor" name="favColor">
-			<option value="red">Red</option>
-			<option value="blue">Blue</option>
-			<option value="green">Green</option>
-			<option value="yellow">Yellow</option>
-		</select>
+		<input type="color" id="favcolor" name="favcolor" required>
+		
 
 		<label for="likeness">How much do you like this color?</label>
 		<input type="range" id="likeness" name="likeness" min="1" max="100">
