--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
 		<input type="url" id="portfolio" name="portfolio" required>
 
 		<label for="favColor">Favourite Colour:</label>
-		<input type="color" id="favcolor" name="favcolor" required>
+		<input type="color" id="favColor" name="favcolor" required>
 		
 
 		<label for="likeness">How much do you like this color?</label>
